--- a/滑动效果图/css/index.css
+++ b/滑动效果图/css/index.css
@@ -11,28 +11,51 @@
 
 .slider .main {
   overflow: hidden; }
-  .slider .main .main-i .caption {
-    position: absolute;
-    right: 50%;
-    top: 30%;
-    z-index: 8; }
-    .slider .main .main-i .caption h2 {
-      font-size: 40px;
-      line-height: 50px;
-      color: #B5B5B5;
-      text-align: right; }
-    .slider .main .main-i .caption h3 {
-      font-size: 70px;
-      line-height: 70px;
-      color: #000000;
-      text-align: right;
-      font-family: 'Open Sans Conden'; }
+  .slider .main .main-i {
+    position: absolute; }
+    .slider .main .main-i .caption {
+      position: absolute;
+      right: 50%;
+      top: 30%;
+      z-index: 2; }
+      .slider .main .main-i .caption h2 {
+        font-size: 40px;
+        line-height: 50px;
+        color: #B5B5B5;
+        text-align: right;
+        margin-right: -45px;
+        -webkit-transition: all 0.8s 1s;
+        -moz-transition: all 0.8s 1s;
+        -ms-transition: all 0.8s 1s;
+        -o-transition: all 0.8s 1s;
+        transition: all 0.8s 1s;
+        opacity: 0;
+        filter: alpha(opacity=0); }
+      .slider .main .main-i .caption h3 {
+        font-size: 70px;
+        line-height: 70px;
+        color: #000000;
+        text-align: right;
+        font-family: 'Open Sans Conden';
+        margin-right: 45px;
+        -webkit-transition: all 0.8s 0.5s;
+        -moz-transition: all 0.8s 0.5s;
+        -ms-transition: all 0.8s 0.5s;
+        -o-transition: all 0.8s 0.5s;
+        transition: all 0.8s 0.5s;
+        opacity: 0;
+        filter: alpha(opacity=0); }
   .slider .main img {
     width: 100%;
     position: absolute;
-    left: 0;
+    left: -50%;
     top: 0;
-    z-index: 1; }
+    z-index: 1;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s; }
 
 .slider .ctrl {
   width: 100%;
@@ -40,20 +63,47 @@
   line-height: 13px;
   text-align: center;
   position: absolute;
-  bottom: -13px;
-  left: 0; }
+  bottom: -13px; }
   .slider .ctrl .ctrl-i {
     display: inline-block;
     width: 150px;
+    margin-right: 1px;
     height: 13px;
     background-color: #666;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
     position: relative; }
+    .slider .ctrl .ctrl-i:hover {
+      background-color: #f0f0f0; }
+      .slider .ctrl .ctrl-i:hover img {
+        opacity: 1;
+        filter: alpha(opacity=100);
+        bottom: 13px; }
     .slider .ctrl .ctrl-i img {
       width: 100%;
       position: absolute;
       bottom: 50px;
       left: 0;
-      z-index: 1; }
+      z-index: 1;
+      opacity: 0;
+      filter: alpha(opacity=0);
+      -webkit-transition: all 0.5s;
+      -moz-transition: all 0.5s;
+      -ms-transition: all 0.5s;
+      -o-transition: all 0.5s;
+      transition: all 0.5s; }
+
+.slider .main .active .caption {
+  z-index: 10; }
+  .slider .main .active .caption h2 {
+    margin-right: 0px;
+    opacity: 1;
+    filter: alpha(opacity=100); }
+  .slider .main .active .caption h3 {
+    margin-right: 0px;
+    opacity: 1;
+    filter: alpha(opacity=100); }
+.slider .main .active img {
+  z-index: 8;
+  left: 0; }
 
 /*# sourceMappingURL=index.css.map */
