--- a/滑动效果图/css/index.scss
+++ b/滑动效果图/css/index.scss
@@ -1,3 +1,15 @@
+@mixin opacity($opacity){
+	opacity:$opacity;
+	filter:alpha(opacity=$opacity*100);
+}
+
+@mixin transition($transition){
+	-webkit-transition:$transition;
+	-moz-transition:$transition;
+	-ms-transition:$transition;
+	-o-transition:$transition;
+	transition:$transition;
+}
 *{
 	margin:0;
 	padding:0;
@@ -14,16 +26,20 @@
 .slider .main{
 	overflow:hidden;
 	.main-i{
+		position:absolute;
 		.caption{
 			position:absolute;
 			right: 50%;
 			top: 30%;
-			z-index: 8;
+			z-index: 2;
 			h2{
 				font-size: 40px;
 				line-height: 50px;
 				color: #B5B5B5;
 				text-align: right;
+				margin-right: -45px;
+				@include transition(all 0.8s 1s);
+				@include opacity(0);
 			}
 			h3{
 				font-size: 70px;
@@ -31,16 +47,20 @@
 				color: #000000;
 				text-align: right;
 				font-family:'Open Sans Conden';
+				margin-right: 45px;
+				@include transition(all 0.8s 0.5s);
+				@include opacity(0);
 			}
 		}
 	}
-	img{
-		width: 100%;
-		position:absolute;
-		left: 0;
-		top: 0;
-		z-index: 1;
-	}
+		img{
+			width: 100%;
+			position:absolute;
+			left: -50%;
+			top: 0;
+			z-index: 1;
+			@include transition(all 0.5s);
+		}
 }
 
 .slider .ctrl{
@@ -50,20 +70,48 @@
 	text-align:center;
 	position:absolute;
 	bottom:-13px;
-	left:0;
 	.ctrl-i {
 		display: inline-block;
 		width: 150px;
+		margin-right: 1px;
 		height: 13px;
 		background-color:#666;
 		box-shadow: 0 1px 1px rgba(0,0,0,0.3);
 		position:relative;
-		img{
-		width: 100%;
-		position:absolute;
-		bottom:50px;
-		left: 0;
-		z-index: 1;
+		
+		&:hover {
+			background-color:#f0f0f0;
+			img {
+				@include opacity(1);
+				bottom:13px;
+			}
 		}
+		img {
+			width: 100%;
+			position:absolute;
+			bottom:50px;
+			left: 0;
+			z-index: 1;
+			@include opacity(0);
+			@include transition(all 0.5s);
+		}
+	}
+}
+
+.slider .main  .active {
+	.caption {
+		z-index: 10;
+		h2{
+			margin-right: 0px;
+			@include opacity(1);
+		}
+		h3{
+			margin-right: 0px;
+			@include opacity(1);
+		}
+	}
+	img {
+		z-index: 8;
+		left: 0;
 	}
 }
