--- a/滑动效果图/css/index.css
+++ b/滑动效果图/css/index.css
@@ -24,13 +24,11 @@
         color: #B5B5B5;
         text-align: right;
         margin-right: -45px;
-        -webkit-transition: all 0.8s 1s;
-        -moz-transition: all 0.8s 1s;
-        -ms-transition: all 0.8s 1s;
-        -o-transition: all 0.8s 1s;
-        transition: all 0.8s 1s;
-        opacity: 0;
-        filter: alpha(opacity=0); }
+        -webkit-transition: all 0.8s 0.5s;
+        -moz-transition: all 0.8s 0.5s;
+        -ms-transition: all 0.8s 0.5s;
+        -o-transition: all 0.8s 0.5s;
+        transition: all 0.8s 0.5s; }
       .slider .main .main-i .caption h3 {
         font-size: 70px;
         line-height: 70px;
@@ -42,9 +40,7 @@
         -moz-transition: all 0.8s 0.5s;
         -ms-transition: all 0.8s 0.5s;
         -o-transition: all 0.8s 0.5s;
-        transition: all 0.8s 0.5s;
-        opacity: 0;
-        filter: alpha(opacity=0); }
+        transition: all 0.8s 0.5s; }
   .slider .main img {
     width: 100%;
     position: absolute;
